[package]
name = "uncon_derive"
readme = "../README.md"
version = "1.0.1"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
repository = "https://github.com/nvzqz/uncon-rs"
categories = ["no-std"]
keywords = ["unchecked", "unsafe", "convert"]
description = "Derive functionality for unchecked conversion traits."

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "nvzqz/uncon-rs" }

[dev-dependencies.uncon]
version = "1.0.0"
path = "../"
default-features = false

[features]
default = ["std"]
std = ["uncon/std"]

[dependencies]
syn = "0.11"
quote = "0.3"
regex = "0.2"
